<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UploadActivity">

    <!--  Toolbar ActionMode Menu Items  -->
    <item
        android:id="@+id/action_stoarge"
        android:icon="@drawable/storage"
        android:iconTint="@color/white"
        android:orderInCategory="100"
        android:title="@string/storage"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_selectall"
        android:icon="@drawable/select_all"
        android:iconTint="@color/white"
        android:orderInCategory="100"
        android:title="@string/selectall"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/delete"
        android:iconTint="@color/white"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="always" />
</menu>
